infrastructure/cluster/manual/ingress/ingress_prometeus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      rewrite ^(/graph)(.*) /prometheus/graph$2 redirect;
  name: kube-system-ingress
  namespace: kube-system
spec:
  rules:
  - host: prom-vre.cern.ch
    http:
      paths:
      - backend:
          service:
            name: cern-magnum-kube-prometheu-prometheus
            port:
              number: 9090
        path: /prometheus(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: cern-magnum-kube-prometheu-alertmanager
            port:
              number: 9093
        path: /alertmanager(/|$)(.*)
        pathType: Prefix
status:
  loadBalancer: {}
